--- a/app/src/main/res/layout/activity_twitter_users.xml
+++ b/app/src/main/res/layout/activity_twitter_users.xml
@@ -7,17 +7,17 @@
     tools:context=".TwitterUsers">
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="404dp"
-        android:layout_height="678dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="45dp"
+        android:layout_marginBottom="45dp"
+        android:alpha="0.5"
         app:layout_constraintBottom_toBottomOf="@+id/listview"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/listview"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/listview"
-        app:srcCompat="@drawable/bird_image" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/angrybird_image" />
 
     <ListView
         android:id="@+id/listview"
